Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43831

Regression from 5.3.2 : WebGL crashes the QtWebKit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.1
    • 5.4.0
    • GUI: OpenGL, WebKit
    • None
    • Windows 8.1 64-bit for build, Windows Server to reproduce the crash
    • 83a5436e1a97b908f3089c3c8ef51f604989ef69

      fancybrowser demo crashes when loading a website with WebGL like https://get.webgl.org because it seems to fail to find an OpenGL function which initializes the m_vertexAttribState referenced below
      .
      The demo was built on a on a Windows 8.1 laptop with '-opengl desktop' option and it works well on the same computer, but the crash occurs when running the same demo on a Windows Server.

      I thought it is related to QTBUG-43318 bug but the crash still occurs after I have applied this patch.

      The complete crash call stack is attached. Basically the crash is triggered in function below

      VertexAttribState& getVertexAttribState(int index)

      { return m_vertexAttribState[index]; }

      because the m_vertexAttribState has no elements and the index to be accessed is 0.

      In version 5.3.2 it seems that the WebGL is automatically disabled somehow and does not crash when a function is not supported because the QtWebKit from this version displays the following message when loads the https://get.webgl.org website on that server :

      'Hmm. While your browser seems to support WebGL, it is disabled or unavailable. If
      possible, please ensure that you are running the latest drivers for your video card.'

      This is the same message I see when I explicitly disable WebGL from QtWebKit settings.

        1. crash_stack.txt
          6 kB
          Aliosa Jankovic
        For Gerrit Dashboard: QTBUG-43831
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            aliosa.jankovic Aliosa Jankovic
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes