Check if OpenGL context is supported

Before the support for dynamic GL builds, the WebCore initialize OpenGL
shims would check if the OpenGL version had all the necessary methods.
After we removed this we now risk continuing with an OpenGL version that
is not supported by WebCore and can cause crashes.

Task-number: QTBUG-43831
Change-Id: I19caffc645ea5dede8b98408cbe0cae5fae8c22f
Reviewed-by: Jocelyn Turcotte <jocelyn.turcotte@digia.com>